# vrp-api-explorer

./: .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REFACTOR_PLAN.md  CLAUDE.md  MIGRATION.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICK_REFACTORING_GUIDE.md  README.md  README_ANALYSIS.md  app.md  eslint.config.mjs  jest.config.js  jest.setup.js  middleware.ts  package.json  plan-ai.md  plan.md  pnpm-lock.yaml  prompts-ai-migration.md  response.json  spec.md  test-data.csv  test-decode.js  test-payload.json  test-polylines.js  todo.md
__tests__/: README.md  VrpExplorer.test.tsx  VrpGantt.test.tsx  VrpJsonEditor.test.tsx  VrpLayout.test.tsx  VrpMap.test.tsx  VrpMapOptimized.test.tsx  hydration.test.tsx  polyline-integration.test.ts  sample-data.test.ts  solvice-integration.test.ts  vrp-api.test.ts  vrp-schema.test.ts
app/: error.tsx  globals.css  layout.tsx  page.tsx
components/: JobBadge.tsx  LoadJobButton.tsx  LoadJobDialog.tsx  PerformanceModeToggle.tsx  VrpAgentChat.tsx  VrpChatKit.tsx  VrpExplorer.tsx  VrpGantt.tsx  VrpGanttAdaptive.tsx  VrpGanttVirtualized.tsx  VrpJsonEditor.tsx  VrpKpiBar.tsx  VrpKpiPanel.tsx  VrpKpiSheet.tsx  VrpLayout.tsx  VrpMap.tsx  VrpMapAdaptive.tsx  VrpMapOptimized.tsx
docs/: INTEGRATION_EXAMPLE.md  PERFORMANCE_OPTIMIZATION.md  demo-security-recommendations.md  (+2 more)
python-backend/: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
python-backend/app/: chat.py  constants.py  main.py
python-backend/app/vrp/: client.py  context_store.py  models.py  routes.py  tools.py  types.py  validators.py
(+114 files in other folders)
